--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -48,7 +48,7 @@ jobs:
       name: Make bundle
       run: |
              cd ${{github.workspace}}/media-downloader
-             ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 media-downloader.app --verbose
+             ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 media-downloader.app -verbose=3
     -  
       name: Post Bundle
       uses: ncipollo/release-action@v1
