--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -49,12 +49,8 @@ jobs:
       run: |
              cd ${{github.workspace}}/media-downloader
              ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 media-downloader.app -verbose=0
-             echo "------${{github.workspace}}/media-downloader---------"
-             ls ${{github.workspace}}/media-downloader
-             echo "-------------------"
-             echo "------${{github.workspace}}---------"
-             ls ${{github.workspace}}
-             echo "-------------------"
+             echo "------${{github.workspace}}/media-downloader.app---------"
+             ls ${{github.workspace}}/media-downloader.app/*
     -  
       name: Post Bundle
       uses: ncipollo/release-action@v1
