--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -47,6 +47,9 @@ jobs:
     - 
       name: Make bundle
       run: |
+             echo "--------ls ${{github.workspace}}/MAC/build6--------------"
+             ls ${{github.workspace}}/MAC/build6
+             echo "----------------------"
              cd ${{github.workspace}}/media-downloader
              ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 media-downloader.app -verbose=0
              echo "------${{github.workspace}}/media-downloader.app---------"
@@ -55,7 +58,7 @@ jobs:
       name: Post Bundle
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ${{github.workspace}}/media-downloader/media-downloader.app
+        artifacts: ${{github.workspace}}/media-downloader/media-downloader.app/${{github.workspace}}/MAC/build6/media-downloader.app
         tag: "0.0.0"
         commit: "main"
         allowUpdates: true
