--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -41,26 +41,11 @@ jobs:
     - 
       name: Build
       run: cmake --build ${{github.workspace}}/MAC/build6
-    - 
-      name: Install
-      run: cmake --install ${{github.workspace}}/MAC/build6
-    - 
-      name: Make bundle
-      run: |
-             echo "--------ls ${{github.workspace}}/MAC/build6--------------"
-             ls ${{github.workspace}}/MAC/build6
-             echo "-------stat ${{github.workspace}}/MAC/build6/media-downloader.app---------------"
-             stat ${{github.workspace}}/MAC/build6/media-downloader.app
-             echo "----------------------"
-             cd ${{github.workspace}}/media-downloader
-             ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 media-downloader.app -verbose=0
-             echo "------${{github.workspace}}/media-downloader.app---------"
-             ls ${{github.workspace}}/media-downloader.app/*
-    -  
+     -  
       name: Post Bundle
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ${{github.workspace}}/media-downloader/media-downloader.app/${{github.workspace}}/MAC/build6/media-downloader.app
+        artifacts: ${{github.workspace}}/MAC/build6/media-downloader.app
         tag: "0.0.0"
         commit: "main"
         allowUpdates: true
