--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -45,8 +45,8 @@ jobs:
       name: Build Bundle
       run: |
          "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 ${{github.workspace}}/MAC/build6/media-downloader.app
-          echo "------${{github.workspace}}/MAC/build6/-------
-          ls ${{github.workspace}}/MAC/build6/
+          echo "------${{github.workspace}}/MAC/build6/*-------
+          ls ${{github.workspace}}/MAC/build6/*
     -
       name: Post Bundle
       uses: ncipollo/release-action@v1
