--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -44,7 +44,9 @@ jobs:
     -  
       name: Build Bundle
       run: |
-         "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 ${{github.workspace}}/MAC/build6/media-downloader.app -verbose=1
+         "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6" ${{github.workspace}}/MAC/build6/media-downloader.app -verbose=1
+         echo "------ls ${{github.workspace}}/MAC/build6/*---------"
+         ls ${{github.workspace}}/MAC/build6/*
     -
       name: Post Bundle
       uses: ncipollo/release-action@v1
