--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -44,9 +44,13 @@ jobs:
     -  
       name: Build Bundle
       run: |
-         "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6" ${{github.workspace}}/MAC/build6/media-downloader.app -verbose=3
-         echo "------ls ${{github.workspace}}/MAC/build6/*---------"
-         ls ${{github.workspace}}/MAC/build6/media-downloader.app/Contents/*
+         "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6" ${{github.workspace}}/MAC/build6/media-downloader.app -verbose=2 -dmg
+         echo "------ls ${{github.workspace}}/MAC/build6---------"
+         ls ${{github.workspace}}/MAC/build6
+          echo "------ls ${{github.workspace}}/MAC---------"
+         ls ${{github.workspace}}/MAC
+          echo "------ls ${{github.workspace}}---------"
+         ls ${{github.workspace}}
     -
       name: Post Bundle
       uses: ncipollo/release-action@v1
