--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -44,18 +44,12 @@ jobs:
     -  
       name: Build Bundle
       run: |
-         "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6" ${{github.workspace}}/MAC/build6/media-downloader.app -verbose=2 -dmg
-         echo "------ls ${{github.workspace}}/MAC/build6---------"
-         ls ${{github.workspace}}/MAC/build6
-          echo "------ls ${{github.workspace}}/MAC---------"
-         ls ${{github.workspace}}/MAC
-          echo "------ls ${{github.workspace}}---------"
-         ls ${{github.workspace}}
+         "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6" ${{github.workspace}}/MAC/build6/media-downloader.app -dmg
     -
       name: Post Bundle
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ${{github.workspace}}/MAC/build6/media-downloader.app
+        artifacts: ${{github.workspace}}/MAC/build6/media-downloader.dmg
         tag: "0.0.0"
         commit: "main"
         allowUpdates: true
