--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -55,7 +55,9 @@ jobs:
          "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6" ${{github.workspace}}/MAC/build6/media-downloader.app -dmg
     -
       name: Zip app
-      run: 7z a ${{github.workspace}}/MAC/build6/media-downloader.app.zip ${{github.workspace}}/MAC/build6/media-downloader.app      
+      run: |
+          7z a ${{github.workspace}}/MAC/build6/media-downloader.app.zip ${{github.workspace}}/MAC/build6/media-downloader.app 
+          ls ${{github.workspace}}/MAC/build6/*
     -
       name: Post Bundle
       uses: ncipollo/release-action@v1
