--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -44,25 +44,17 @@ jobs:
     -
       name: Download ytdlp
       run: aria2c -d ${{github.workspace}}/MAC/build6/media-downloader.app/Contents/MacOS https://github.com/yt-dlp/yt-dlp/releases/download/2024.04.09/yt-dlp_macos 
-    - name: Show Bundle contents
-      run: |
-          cat ${{github.workspace}}/MAC/build6/media-downloader.app/Contents/Info.plist
-          echo "---------------"
-          ls ${{github.workspace}}/MAC/build6/media-downloader.app/Contents/MacOS/*
-    -  
-      name: Build Bundle
-      run: |
-         "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6" ${{github.workspace}}/MAC/build6/media-downloader.app -dmg
+    -
+      name: Create .img Bundle
+      run: ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt6 ${{github.workspace}}/MAC/build6/media-downloader.app -dmg
     -
       name: Zip app
-      run: |
-          7z a ${{github.workspace}}/MAC/build6/media-downloader.app.zip ${{github.workspace}}/MAC/build6/media-downloader.app 
-          ls ${{github.workspace}}/MAC/build6/*
+      run: 7z a ${{github.workspace}}/MAC/build6/media-downloader.zip ${{github.workspace}}/MAC/build6/media-downloader.app 
     -
       name: Post Bundle
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ${{github.workspace}}/MAC/build6/media-downloader.dmg ${{github.workspace}}/MAC/build6/media-downloader.app.zip
+        artifacts: ${{github.workspace}}/MAC/build6/media-downloader.dmg ${{github.workspace}}/MAC/build6/media-downloader.zip
         tag: "0.0.0"
         commit: "main"
         allowUpdates: true
