--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -379,20 +379,20 @@ if( APPLE )
     install( TARGETS media-downloader BUNDLE DESTINATION . COMPONENT Runtime )
 
     file( COPY src/media-downloader.icns DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/ar.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/de_DE.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/en_US.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/es.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/fr_FR.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/it_IT.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/ja_JP.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/nl_NL.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/pl_PL.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/pt_BR.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/ru_RU.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/sv_SE.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/tr_TR.qm DESTINATION "media-downloader.app/Contents/Resources/" )
-    file( COPY translations/zh_CN.qm DESTINATION "media-downloaderapp/Contents/Resources/" )
+    file( COPY translations/ar.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/de_DE.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/en_US.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/es.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/fr_FR.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/it_IT.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/ja_JP.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/nl_NL.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/pl_PL.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/pt_BR.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/ru_RU.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/sv_SE.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/tr_TR.qm DESTINATION "media-downloader.app/Contents/Resources/translations/" )
+    file( COPY translations/zh_CN.qm DESTINATION "media-downloaderapp/Contents/Resources/translations/" )
 
     file( COPY changelog DESTINATION "media-downloader.app/Contents/Resources/" )
 endif()
